# 2048Game-On-chain

./: .env.example  .gitignore  Makefile  README.md
backend/: .env.example  .env.sepolia.example  Cargo.toml  README.md
backend/src/: config.rs  game.rs  main.rs  models.rs
contracts/: .gitignore  foundry.toml
contracts/script/: DeployLocal.s.sol  DeploySepolia.s.sol  UpdateSepoliaVrfConfig.s.sol
contracts/src/: OnChain2048Scores.sol
contracts/test/: OnChain2048Scores.t.sol
docs/: SEPOLIA.md
frontend/: .env.local.example  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/audio/: AudioManager.tsx
frontend/components/board/: Board.tsx  splash.tsx  tile.tsx
frontend/components/header/: Header.tsx
frontend/components/history/: GameHistory.tsx
frontend/components/leaderboard/: Leaderboard.tsx
frontend/components/onchain/: AutoSubmitter.tsx  ScoreEventWatcher.tsx
frontend/components/score/: Score.tsx
frontend/components/settings/: AudioSettingsPanel.tsx
frontend/components/ui/: Modal.tsx
frontend/context/: audio-context.tsx  game-context.tsx  web3-context.tsx
frontend/lib/: backend.ts  chain.ts  contract.ts  format.test.ts  format.ts  game.ts  query-keys.ts  subgraph.ts  tx-errors.test.ts  tx-errors.ts  wagmi.ts  wallet.ts
frontend/models/: tile.ts
subgraph/: README.md  Subgraph操作文档.md  package-lock.json  package.json  queries.graphql  schema.graphql  subgraph.yaml
subgraph/abis/: OnChain2048Scores.json
subgraph/src/: on-chain-2048-scores.ts
(+1 files in other folders)
